bambu-macro/rust_hls_macro/tests/fails_on_unknown_arguments.stderr
error: Unknown field: `unknown_flag`
 --> tests/fails_on_unknown_arguments.rs:5:7
  |
5 | #[hls(unknown_flag = "something")]
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^
